--- a/3.html
+++ b/3.html
@@ -1,3 +1,11 @@
+<!--
+ * @Author: your name
+ * @Date: 2021-10-13 16:15:59
+ * @LastEditTime: 2021-10-13 16:33:11
+ * @LastEditors: your name
+ * @Description: In User Settings Edit
+ * @FilePath: \ajax\git\3.html
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,6 +16,7 @@
   <!-- 1、引入模板的文件 -->
   <script src="js/template-native.js"></script>
   <!-- 2、创建模板 -->
+  <script></script>
   <script type="text/html" id="tem">
     <!-- 3、添加模板中的结构 -->
     <% for (var i = 0 ; i < 5 ; i++) { %>
